--- a/SGI/SGI.UI/Components/Pages/Transaccion.razor.css
+++ b/SGI/SGI.UI/Components/Pages/Transaccion.razor.css
@@ -140,3 +140,36 @@ h1, h2 {
 .table tr:nth-child(even) {
     background-color: #fafafa;
 }
+.notificacion {
+    position: absolute;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+    width: auto;
+    max-width: 80%;
+    z-index: 1000;
+}
+
+.exito {
+    color: white;
+    background-color: green;
+}
+
+.error {
+    color: white;
+    background-color: red;
+}
+
+.error-message {
+    color: red;
+    font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
+}
