se ocultan las opciones de gestiondeusuarios si el usuario no tiene los permisos y el de dar permisos si no es admin

--- a/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
+++ b/SGI/SGI.UI/Components/Pages/GestionDeUsuario.razor
@@ -6,6 +6,8 @@
 @inject CasoDeUsoUsuarioModificar usuarioModificar
 @inject CasoDeUsoPermisoAlta permisoAlta
 @inject CasoDeUsoPermisoBaja permisoBaja
+@inject ConsultaDePermisos consultaDePermisos
+@inject Usuario usuarioActual
 <PageTitle>Gestión de Usuarios</PageTitle> 
 
 <div class="contenedor">
@@ -44,12 +46,14 @@
                         <button class="btn btn-primary" @onclick="() => EditarUsuario(usuario)">
                             Editar
                         </button>
-                        <button class="btn btn-primary" @onclick="() => AbrirModalAgregarPermiso(usuario)">
-                            Agregar Permiso
-                        </button>
-                        <button class="btn btn-primary" @onclick="() => AbrirModalEliminarPermiso(usuario)">
-                            Eliminar Permiso
-                        </button>
+                        @if(consultaDePermisos.admin(usuarioActual.IdUsuario)){
+                            <button class="btn btn-primary" @onclick="() => AbrirModalAgregarPermiso(usuario)">
+                                Agregar Permiso
+                            </button>
+                            <button class="btn btn-primary" @onclick="() => AbrirModalEliminarPermiso(usuario)">
+                                Eliminar Permiso
+                            </button>
+                        }
                     </td>
                 </tr>
             }
