Se arreglo el iniciar sesion del Home

--- a/SGI/SGI.UI/Components/Pages/Home.razor
+++ b/SGI/SGI.UI/Components/Pages/Home.razor
@@ -3,6 +3,7 @@
 @using SGI.Aplicacion;
 @inject Usuario usuarioActual;
 @inject NavigationManager Navigation
+@rendermode InteractiveServer
 
 <PageTitle>SGI</PageTitle>
 
