--- a/SGI/SGI.UI/Components/Layout/NavMenu.razor
+++ b/SGI/SGI.UI/Components/Layout/NavMenu.razor
@@ -34,7 +34,7 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Transacciones
             </NavLink>
         </div>
-        @if(consultarPermisos.Ejecutar(Permiso.Permisos.usuariomodificacion, usuarioActual.IdUsuario)){
+        @if(consultarPermisos.Ejecutar(Permiso.Permisos.usuariomodificacion, usuarioActual.IdUsuario) || consultarPermisos.admin(usuarioActual.IdUsuario)){
             <div class="nav-item px-3">
             <NavLink class="nav-link" href="Gestiondeusuario">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> GestionDeUsuarios
