se agregaron cosas

--- a/SGI/SGI.UI/Components/Pages/Categorias.razor
+++ b/SGI/SGI.UI/Components/Pages/Categorias.razor
@@ -121,9 +121,11 @@
     private bool mostrarFormularioAlta = false;
     private bool mostrarFormularioBaja = false;
     private bool mostrarFormularioModificar = false;
-    private string? nombreCategoria, nombreCambiado, descripcion, descripcionModificada;
+    private string descripcionModificada = "";
+    private string nombreCategoria = "";
+    private string nombreCambiado = "";
+    private string descripcion = "";
     private int idABuscar, idAModificar;
-    private int idUsuario;
 
     private void MostrarFormularioModificar()
     {
